# autorace2018_superburger

./: 0819_final_hsv  README.md
control/: CMakeLists.txt  package.xml
control/include/control/: burger_info.hpp  mode.hpp  odometry.hpp  sensor.hpp  supervisor.hpp
control/launch/: control.launch  conttol_test.launch
control/src/: motor_control.cpp
vision/blocking_bar_detection/: CMakeLists.txt  package.xml
vision/blocking_bar_detection/src/: blocking_bar_detection.cpp
vision/cal_distance/data/: main_calibration.txt  main_calibrationLine.txt
vision/cal_distance/src/: cal_distance.cpp  calibration_test  calibration_test.cpp  ost.txt  simpleLinearSelector.py  simpleLinearSelector.y
vision/camera_image/launch/: camera_image.launch
vision/camera_image/src/: camera_image.cpp  video_save
vision/lane_detection/: CMakeLists.txt  package.xml
vision/lane_detection/include/lane_detection_func/: .lane_detection_func.hpp.swp  lane_detection_func.hpp
vision/lane_detection/launch/: start.launch
vision/lane_detection/src/: lane_detection.cpp  lane_detection_func.cpp
vision/park_area_detection/: CMakeLists.txt  package.xml
vision/signal_lamp_detection/: CMakeLists.txt  package.xml
vision/vision_launch/launch/: test_vision.launch  two_direction_test.launch  video_test.launch  vision_launch.launch
